# trainticketing

./: README.md
railway-ticketing/: .dockerignore  docker-compose.yml
railway-ticketing-cobal/ticket-validation-service/: go.mod
railway-ticketing-cobal/ticket-validation-service/cmd/server/: main.go
railway-ticketing-cobal/ticket-validation-service/internal/service/: validation.go
railway-ticketing-cobal/ticket-validation-service/internal/store/: memory_store.go
railway-ticketing/api-gateway-service/: index.js  package-lock.json  package.json
railway-ticketing/api-gateway-service/auth/: apiKeyAuth.js  jwtAuth.js
railway-ticketing/api-gateway-service/proxy/: gateProxy.js  routesProxy.js  ticketProxy.js
railway-ticketing/auth-service/: package-lock.json  package.json
railway-ticketing/auth-service/src/: index.js
railway-ticketing/gate-scanner-service/: Cargo.toml  Dockerfile
railway-ticketing/gate-scanner-service/src/: circuit_breaker.rs  main.rs  simulate.rs
railway-ticketing/ticket-validation-service/: Dockerfile  go.mod
railway-ticketing/ticket-validation-service/cmd/server/: main.go
railway-ticketing/ticket-validation-service/internal/handler/: create_ticket.go  internal_auth.go  routes.go  validate.go
railway-ticketing/ticket-validation-service/internal/metrics/: metrics.go
railway-ticketing/ticket-validation-service/internal/model/: ticket.go
ticket-frontend/: Dockerfile  docker-compose.yml  package-lock.json  package.json
ticket-frontend/src/: App.css  App.tsx  api.js  useTicketWallet.ts
(+3 files in other folders)
